# GRA_MNEMON_reproduce

./: .env.templete  .pre-commit-config.yaml  README.md  gae.py  pyproject.toml  requirements.txt  train_embedding.py
direct_recovery/: direct_recovery.py  run.sh  top_k.py
gen_embedding/: gcn.py  node2vec.py  train.sh
invert_embedding/: invert.py  invert_embedding.py
knn/: knn.py  run.sh
metric/: confusion_matrix.py
mnemon/: gae.py  gml.py  gumble_sampling.py  loss.py  mnemon.py  prepare_dataset.py  reconstruct_loss.py  test.py  train.sh
result/: cal_metric.py  sample_statistic.ipynb
